@@ -6,6 +6,8 @@ original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfi
 NOTE : this modified version is still under the Artistic License 2.0
 
 - Improved location recognition engine for Senchal type cities where no city subzones are defined.
+- In the wilderness of Blackwood, the add-on automatically recognizes you are in the adventure zone.
+- Updated location database for Blackwood Chapter. Leyawiin and Gideon are now recognized as cities.
 
 Version 1.6.83 : by Calamath
 [HotFix]
